# diagrams-solve

./: .travis.yml  CHANGES.markdown  LICENSE  README.markdown  diagrams-solve.cabal  flake.nix
.github/workflows/: haskell-ci.yml
src/Diagrams/Solve/: Polynomial.hs  Tridiagonal.hs
tests/: Test.hs
