name:                diagrams-solve
version:             0.1
synopsis:            Pure Haskell solver routines used by diagrams
description:         Pure Haskell solver routines used by the diagrams
                     project.  Currently includes finding real roots
                     of low-degree (n < 5) polynomials, and solving
                     tridiagonal and cyclic tridiagonal linear
                     systems.
homepage:            http://projects.haskell.org/diagrams
license:             BSD3
license-file:        LICENSE
author:              various
maintainer:          diagrams-discuss@googlegroups.com
category:            Math
build-type:          Simple
extra-source-files:  README.markdown, CHANGES.markdown
cabal-version:       >=1.10
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-solve.git

library
  exposed-modules:     Diagrams.Solve.Polynomial,
                       Diagrams.Solve.Tridiagonal
  build-depends:       base >=4.5 && < 4.8
  hs-source-dirs:      src
  default-language:    Haskell2010